# moe-ollama-endpoint-grumpified

./: .dockerignore  .env.example  API.md  BACKUP_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  Containerfile  DEPLOYMENT.md  DEVELOPMENT.md  MODELS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml  publish.yml
app/: main.py
app/core/: config.py
app/db/: database.py  models.py
app/models/: schemas.py
app/routes/: chat.py  embeddings.py  models.py  rag.py
app/services/: ollama_client.py  rag.py  router.py
examples/: openai_compatible.py  usage_example.py
tests/: conftest.py  test_api.py  test_routing.py
